I0016: Java bumped to 17